# ml-monitoring

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  taskfile.yml
db_init_scripts/: db.sql
grafana/dashboards/: dashboard.json  mlmonitoring_dashboard.json  seasonality_dashboard.json
grafana/provisioning/datasources/: datasources.yaml
ml_models/: constants.py  gateway.py  simulate_churn.py  simulate_feedback.py  simulate_predictions.py  train.py
prom-sql/: config.yml  queries.yml  schema.sql
prometheus/: prometheus.yaml
src/api/: app.py  metrics.py  models.py  simulate_seasonality.py
src/ml_models/: constants.py  gateway.py  simulate_feedback.py  simulate_predictions.py  train.py  utils.py
src/monitoring-with-prometheus/: app.py  db_manager.py  metrics.py
